[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "masa"
version = "0.1.0"  # Replace with your actual version
description = "MASA: Matching Anything By Segmenting Anything"
readme = "README.md"
keywords = ["instance matching", "object tracking"]
authors = [
    { name = "Siyuan Li", email = "siyuan.li@vision.ee.ethz.ch" },
]
license = {text = "Apache-2.0"}

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">= 3.11"

dependencies = [
    "wheel",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "transformers==4.38.2",
    "tokenizers",
    "numpy<=1.26.4",
    "opencv-python",
    "supervision",
    "openmim",
    "mmdet @ git+https://github.com/open-mmlab/mmdetection.git@v3.3.0",
    "mmcv==2.1.0",
    "mmengine",
    "nltk",
    "h5py",
    "einops",
    "seaborn",
    "fairscale",
    "clip @ git+https://github.com/openai/CLIP.git",
    "trackeval @ git+https://github.com/siyuanliii/TrackEval.git",
    "teta @ git+https://github.com/SysCV/tet.git#subdirectory=teta",
    "scalabel @ git+https://github.com/scalabel/scalabel.git@scalabel-evalAPI",
    "tao @ git+https://github.com/TAO-Dataset/tao",
    "lvis @ git+https://github.com/lvis-dataset/lvis-api.git",
]

[tool.setuptools]
package-dir = {"masa" = "masa"}
include-package-data = false
license-files = ["LICENSE"]
zip-safe = true

[tool.setuptools.packages.find]
include = ["masa*"]
exclude = ["docs*", "tests*", "third_party*", "assets*"]
